--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
             </div>
             <div class="u-align-center u-border-no-bottom u-border-no-left u-border-palette-4-dark-1 u-bottom-right-radius-50 u-container-style u-gradient u-list-item u-repeater-item u-shape-round u-top-left-radius-50 u-top-right-radius-50 u-video-cover u-list-item-3" data-animation-name="flipIn" data-animation-duration="1500" data-animation-direction="X" data-animation-delay="250">
               <div class="u-container-layout u-similar-container u-container-layout-3">
-                <img class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-hover-feature u-image u-image-round u-image-3" alt="" data-image-width="354" data-image-height="251" data-href="https://nicepage.com" src="images/screenshot_2021-01-31_135711.png">
+                <img class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-hover-feature u-image u-image-round u-image-3" alt="" data-image-width="354" data-image-height="251" data-href="https://globalgamejam.org/2021/games/stembots-adventures-3" src="images/screenshot_2021-01-31_135711.png">
                 <h4 class="u-align-center u-custom-font u-font-montserrat u-text u-text-default u-text-6">STEM bot's adventure</h4>
                 <p class="u-align-center u-text u-text-7">Global gamejam project 2021</p>
               </div>
             </div>
-            <div class="u-border-no-bottom u-border-no-left u-border-palette-4-dark-1 u-bottom-right-radius-50 u-container-style u-gradient u-list-item u-repeater-item u-shape-round u-top-left-radius-50 u-top-right-radius-50 u-video-cover u-list-item-4" data-animation-name="flipIn" data-animation-duration="1500" data-animation-direction="X" data-animation-delay="250" data-href="https://nicepage.com">
+            <div class="u-border-no-bottom u-border-no-left u-border-palette-4-dark-1 u-bottom-right-radius-50 u-container-style u-gradient u-list-item u-repeater-item u-shape-round u-top-left-radius-50 u-top-right-radius-50 u-video-cover u-list-item-4" data-animation-name="flipIn" data-animation-duration="1500" data-animation-direction="X" data-animation-delay="250">
               <div class="u-container-layout u-similar-container u-container-layout-4">
                 <img class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-hover-feature u-image u-image-round u-image-4" alt="" data-image-width="315" data-image-height="250" data-href="https://intercolab.itch.io/webglmobilepc-test" src="images/XfBnxe.png">
                 <h4 class="u-align-center u-custom-font u-font-montserrat u-text u-text-default u-text-8">Colaboration Project 2020</h4>
